Improve code, move title delete logic from FileService to main, add ENUM to type marking, rename proccessOperaton to processTransactions, change format for report, now it not List<String> but String Delete all magic numbers.